Remove opacity prop from Overlay and add invisible. Fixes #183, #178

--- a/components/overlay/style.scss
+++ b/components/overlay/style.scss
@@ -14,6 +14,9 @@
   align-items: center;
   justify-content: center;
   pointer-events: none;
+  &.invisible > *:not(.overlay) {
+    pointer-events: all;
+  }
 }
 
 .overlay {
@@ -31,4 +34,7 @@
 
 .active {
   pointer-events: all;
+  > .overlay {
+    opacity: $overlay-opacity;
+  }
 }
